--- a/pet_app/templates/pet_app/pets.html
+++ b/pet_app/templates/pet_app/pets.html
@@ -12,7 +12,7 @@
     <div class="pet">
         <h2>{{pet.petName}}</h2>
         <p>{{pet.petAge}}</p>
-        <p>{{pet.petBreed}}</p>
+        <p>{{pet.petBread}}</p>
         <img class="pet-photo" src="{{pet.petImage}}">
     
     
