added login files

--- a/pet_app/templates/pet_app/home.html
+++ b/pet_app/templates/pet_app/home.html
@@ -6,6 +6,6 @@
     <title>Paws Project</title>
 </head>
 <body>
-    <h1>Paws Rescue Center</h1>3cde8i-=3
+    <h1>Paws Rescue Center</h1>
 </body>
-</html>
+</html>  
